--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,18 @@
     "require": {
         "php": "^8.1",
         "aws/aws-sdk-php": "^3.298",
+        "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-notification-channels/aws-sns": "^1.5",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "league/flysystem-aws-s3-v3": "^3.0"
+        "laravel/ui": "^4.4",
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "setasign/fpdi-fpdf": "^2.3",
+        "smalot/pdfparser": "^2.8",
+        "spatie/pdf-to-text": "^1.52",
+        "tecnickcom/tcpdf": "^6.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
