--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "setasign/fpdi-fpdf": "^2.3",
         "smalot/pdfparser": "^2.8",
         "spatie/pdf-to-text": "^1.52",
-        "tecnickcom/tcpdf": "^6.6"
+        "tecnickcom/tcpdf": "^6.6",
+        "twilio/sdk": "^8.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
