--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel-notification-channels/aws-sns": "^1.5",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.14",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.4",
         "league/flysystem-aws-s3-v3": "^3.0",
