--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "aws/aws-sdk-php": "^3.298",
         "dompdf/dompdf": "^2.0",
+        "google/apiclient": "^2.17",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-notification-channels/aws-sns": "^1.5",
         "laravel/framework": "^10.10",
